* cart overview scrollbar fix part 1

--- a/ui/src/js/backOffice/cartManager/cartOverview.less
+++ b/ui/src/js/backOffice/cartManager/cartOverview.less
@@ -9,12 +9,12 @@
   }
 
   .react-grid-Row {
-    height: 25px!important;
+    height: 35px!important;
     font-size: 12px;
 
     .react-grid-Cell {
       padding-left: 5px;
-      height: 25px!important;
+      height: 35px!important;
     }
   }
 
