--- a/ui/src/less/main.less
+++ b/ui/src/less/main.less
@@ -33,7 +33,10 @@ textarea {
 }
 
 .react-grid-Container{
-  width: auto!important;
+  width: auto !important;
+}
+
+.react-grid-Canvas {
 }
 
 .spinner-div {
